Improvements in graph construction for synteny blocks